# hackathon-2-Todo-App-

./: .gitignore
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
history/prompts/001-todo-cli-phase1/: 001-generate-phase-i-tasks.tasks.prompt.md  002-implement-phase-i-todo-cli.green.prompt.md
history/prompts/constitution/: 001-establish-sdd-constitution.constitution.prompt.md
history/prompts/todo-cli-phase1/: 002-specify-phase-i-todo-cli.spec.prompt.md  003-plan-phase-i-todo-cli.plan.prompt.md  004-generate-tasks-phase-i-todo-cli.tasks.prompt.md
specs/001-todo-cli-phase1/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-todo-cli-phase1/checklists/: requirements.md
specs/001-todo-cli-phase1/contracts/: manager_api.md
src/: pyproject.toml  tasks.json
src/todo/: __init__.py  cli.py  entities.py  main.py  manager.py  persistence.py
tests/: conftest.py
tests/integration/: test_persistence.py
tests/unit/: test_entities.py  test_manager.py
